# easy-archive

./: .gitignore  Cargo.toml  README.md  justfile  package.json  pnpm-workspace.yaml  readme.md
.github/workflows/: release.yml  test.yml
assets/: test.tar  test.tar.bz2  test.tar.xz  test.tar.zst
easy-archive/: Cargo.toml  readme.md
easy-archive-wasm/: Cargo.toml  package.json  readme.md
easy-archive-wasm/src/: lib.rs
easy-archive-wasm/src-ts/: cli.ts  file.ts  index.ts  share.ts  tool.ts
easy-archive-wasm/src-ts/wasm/: index.d.ts  index.js
easy-archive-wasm/test/: index.test.ts  tool.test.ts
easy-archive/src/: error.rs  lib.rs  main.rs  tool.rs  traits.rs  ty.rs  types.rs  utils.rs
easy-archive/src/archive/: mod.rs  tar.rs  zip.rs
easy-archive/src/archive/seven_zip/: decode.rs  encode.rs  mod.rs
easy-archive/src/archive/tar/: decode.rs  encode.rs  mod.rs
easy-archive/src/archive/tar_bz/: decode.rs  encode.rs  mod.rs
easy-archive/src/archive/tar_gz/: decode.rs  encode.rs  mod.rs
easy-archive/src/archive/tar_xz/: decode.rs  encode.rs  mod.rs
easy-archive/src/archive/tar_zstd/: decode.rs  encode.rs  mod.rs
easy-archive/src/archive/zip/: decode.rs  encode.rs  mod.rs
scripts/: update-assets.sh
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
