[workspace]
members = ["easy-archive", "easy-archive-wasm"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "easy-archive"
repository = "https://github.com/ahaoboy/easy-archive"
homepage = "https://github.com/ahaoboy/easy-archive"
authors = ["ahaoboy"]

[workspace.dependencies]
wasm-bindgen = { version = "0.2" }
tar = { package = "binstall-tar", version = "0.4" }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
flate2 = { version = "1.0", default-features = false, features = [
  "rust_backend",
  "miniz_oxide",
] }
lzma-rs = "0.3"
ruzstd = "0.8"
bzip2-rs = "0.1"
path-clean = "1"
indexmap = "2.7"
rc-zip = { version = "5.2" }
rc-zip-sync = { version = "4.2", features = [
  "bzip2",
  "deflate64",
  "lzma",
  "zstd",
] }
xz2 = "0.1"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
