[workspace]
members = ["easy-archive", "easy-archive-wasm"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "easy-archive"
repository = "https://github.com/ahaoboy/easy-archive"
homepage = "https://github.com/ahaoboy/easy-archive"
authors = ["ahaoboy"]
include = ["/easy-archive", "/Cargo.toml", "/README.md"]

[workspace.dependencies]
strum = "0.27"
strum_macros = "0.27"
wasm-bindgen = { version = "0.2" }
tar = { package = "binstall-tar", version = "0.4" }
zip = { version = "6", default-features = false, features = [
  # "aes-crypto" # getrandom error
  "deflate",
  "time",
  "xz",
  "bzip2",
  "lzma",
  "zstd",
] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
lzma-rs = "0.3"
ruzstd = "0.8"
bzip2-rs = "0.1"
path-clean = "1"
rc-zip = { version = "5" }
rc-zip-sync = { version = "4", features = [
  "bzip2",
  "deflate64",
  "lzma",
  "zstd",
] }
liblzma = "0.4"
time = { version = "0.3", features = ["wasm-bindgen"] }

# [profile.release]
# debug = false
# lto = true
# strip = true
# opt-level = 3
# codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
