[package]
name = "easy-archive-wasm"
version = "0.1.0"
authors = ["ahaoboy <504595380@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
easy-archive = { path = "../easy-archive", features = ["wasm"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
umask = "2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
