[package]
name = "easy-archive-wasm"
authors = ["ahaoboy <504595380@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
easy-archive = { path = "../easy-archive", features = [
  "wasm",
], default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
