[package]
name = "easy-archive"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "easy-archive"

[features]
default = ["cli"]
wasm = ["wasm-bindgen", "zip", "lzma-rs", "liblzma"]
cli = ["zip", "liblzma"]
rc-zip = ["dep:rc-zip", "dep:rc-zip-sync"]

[dependencies]
strum = { workspace = true }
strum_macros = { workspace = true }
tar = { workspace = true }
zip = { workspace = true, optional = true }
flate2 = { workspace = true }
lzma-rs = { workspace = true, optional = true }
ruzstd = { workspace = true }
bzip2-rs = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
path-clean = { workspace = true }
rc-zip = { workspace = true, optional = true }
rc-zip-sync = { workspace = true, optional = true }
liblzma = { workspace = true, optional = true }
time = { workspace = true }
