[package]
name = "easy-archive"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "easy-archive"

[features]
# Default: all formats with both encode and decode
default = [
  "tar",
  "tar-gz",
  "tar-xz",
  "tar-bz",
  "tar-zstd",
  "zip",
  "encode",
  "decode",
  "7z"
]
cli = ["default"]
wasm = ["wasm-bindgen", "default"]

# Operation features
# When used alone, they enable all formats
# When combined with specific formats (e.g., ["encode", "tar-xz"]), only those formats are enabled
encode = []
decode = []

# Format features (base dependencies)
tar = ["dep:tar"]
tar-gz = ["tar", "dep:flate2"]
tar-xz = ["tar", "dep:liblzma"]
tar-bz = ["tar", "dep:bzip2-rs"]
tar-zstd = ["tar", "dep:zstd", "dep:ruzstd"]
zip = ["dep:zip", "dep:time"]
7z = ["dep:sevenz-rust2"]

# Alternative zip implementation (optional)
rc-zip = ["dep:rc-zip", "dep:rc-zip-sync"]

[dependencies]
# Core dependencies
thiserror = { workspace = true }
path-clean = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# Optional format-specific dependencies
tar = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
liblzma = { workspace = true, optional = true }
bzip2-rs = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
ruzstd = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
time = { workspace = true, optional = true }

# Alternative zip implementation (optional)
rc-zip = { workspace = true, optional = true }
rc-zip-sync = { workspace = true, optional = true }

sevenz-rust2 = { workspace = true, optional = true }

# WASM support
wasm-bindgen = { workspace = true, optional = true }

